frame_webapp_test/src/main/webapp/error/401.jsp
<%@ page language="java" contentType="text/html; charset=UTF-8"
    pageEncoding="UTF-8" isErrorPage="true"%><% 	
%> 
您还没有登录，请登录后再进行该操作。<a href='index.do'>重新登录</a>